# liteperf

./: .gitignore  CMakeLists.txt  Dockerfile  Gemfile  README.md  Rakefile  build.sh  tgfx.gemspec
ext/tgfx/: arial_bold.h  extconf.rb  fbgfx.c  fbgfx.h  tgfx.c
samples/: basic.rb  clock.rb  pngclock.rb  square.rb  svgclock.rb
src/: fbgfx.c  fbgfx.cc  fbgfx.h  liteperf.c  liteperf.h  main.cc
